dixatestplatform/chaos-controller/deploy/kube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chaos-controller
  labels:
    dixa-app: chaos-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      dixa-app: chaos-controller
  template:
    metadata:
      name: chaos-controller
      labels:
        dixa-app: chaos-controller
    spec:
      serviceAccountName: chaos-controller
      containers:
      - name: chaos-controller
        image: 654015427134.dkr.ecr.eu-west-1.amazonaws.com/chaos-secalekdev-chaos-controller:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        readinessProbe:
          failureThreshold: 30
          httpGet:
            path: /hello
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 1
          periodSeconds: 2
          successThreshold: 1
          timeoutSeconds: 3
        resources:
          requests:
            memory: 64Mi
            cpu: 250m
          limits:
            memory: 256Mi
            cpu: 1000m
