dixatestplatform/chaos-controller/deploy/kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chaos-controller
spec:
  selector:
    dixa-app: chaos-controller
  ports:
    - port: 80
      targetPort: 8080
