dixatestplatform/chaos-controller/deploy/kube/destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: chaos-controller
spec:
  host: chaos-controller
